0026168: Lost colors for IGES import